--- a/interactivitysite/templates/home.html
+++ b/interactivitysite/templates/home.html
@@ -1,19 +1,18 @@
+{% load interactivity %}
+
 <!DOCTYPE html>
 
 <html>
     <head>
         <link rel="stylesheet" href="{{STATIC_URL}}style.css">
         <script type="text/javascript" src="{{STATIC_URL}}jquery.js"></script>
-
-        {% include "discourse/assets.html" %}
+        {% interactivity_header 'cct-exercise1' %}
     </head>
     <body>
         <div class="layout">
-            <h1>{{ page.title }}</h1>
+            <h1>Interactivity demo</h1>
 
-            {% document page %}
-
-            {% thread page %}
+            {% interactivity %}            
         </div>
     </body>
 </html>
