--- a/example/templates/interactivity/exercise.html
+++ b/example/templates/interactivity/exercise.html
@@ -6,7 +6,7 @@
     <head>
         <link rel="stylesheet" href="{{STATIC_URL}}style.css">
         <script type="text/javascript" src="{{STATIC_URL}}jquery.js"></script>
-        {% interactivity_header 'cct-exercise1' %}
+        {% interactivity_header exercise_name %}
     </head>
     
     <body>
