--- a/example/templates/home.html
+++ b/example/templates/home.html
@@ -12,14 +12,16 @@
     <body>
         <div class="layout">
             <h1>Interactivity demo</h1>
-            <p>Interactivity app provides the following views:</p>            
-            
+
+            <p>Interactivity app provides the following views:</p>                        
             <ul>                
                 <li><a href="{% url 'all_interactivities' %}">interactivities</a> -- a list of all the interactivities in the database</li>
                 <li><a href="">exercise</a> -- a view of a specific interactivity/exercise (here's an example)</li>
             </ul>
 
-            <h1>Interactivity demo</h1>
+            <p>There is also a <a href="{% url 'policyworldgrader' %}">policyworld grader.</a></p>
+
+            <h2>Interactivity </h2>
             {% interactivity %}            
         </div>
     </body>
