fix a few bugs including logging and add gui tester

--- a/example/templates/interactivity/hello.html
+++ b/example/templates/interactivity/hello.html
@@ -6,14 +6,12 @@
     <head>
         <link rel="stylesheet" href="{{STATIC_URL}}style.css">
        
-        {% interactivity_header exercise_name %}
     </head>
     
     <body>
         <div class="layout">            
-            <h2>Exercise: {{ exercise_name }} </h2>
-            <p>&nbsp;</p>
-            {% interactivity %}            
+            <h2>Hi!</h2>
+            <p>{{output}}</p>
         </div>
     </body>
 
